Initial commit of website

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
       <span class="text-3xl font-['Pacifico'] text-primary">Diajj Cakes</span>
     </a>
     <nav class="hidden md:flex items-center space-x-8">
-  <a href="home.html" class="text-gray-800 hover:text-primary font-medium transition">Home</a>
+  <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition">Home</a>
   <a href="about.html" class="text-gray-800 hover:text-primary font-medium transition">About</a>
   <a href="product.html" class="text-gray-800 hover:text-primary font-medium transition">Products</a>
   <a href="chefs.html" class="text-gray-800 hover:text-primary font-medium transition">Chefs</a>
@@ -131,7 +131,7 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
       <div>
         <h4 class="text-xl font-bold mb-6">Quick Links</h4>
         <ul class="space-y-3">
-          <li><a href="home.html" class="text-gray-400 hover:text-primary transition">Home</a></li>
+          <li><a href="index.html" class="text-gray-400 hover:text-primary transition">Home</a></li>
           <li><a href="about.html" class="text-gray-400 hover:text-primary transition">About Us</a></li>
           <li><a href="product.html" class="text-gray-400 hover:text-primary transition">Our Products</a></li>
           <li><a href="chefs.html" class="text-gray-400 hover:text-primary transition">Master Chefs</a></li>
