Initial commit of website

--- a/chefs.html
+++ b/chefs.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f370.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Master Chefs | Diajj Cakes</title>
 <script src="https://cdn.tailwindcss.com/3.4.16"></script>
@@ -20,7 +22,7 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
 <!-- Header -->
 <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
   <div class="container mx-auto px-6 py-4 flex items-center justify-between">
-    <a href="home.html" class="flex items-center space-x-2">
+    <a href="index.html" class="flex items-center space-x-2">
       <div class="w-8 h-8 flex items-center justify-center">
         <i class="ri-cake-3-fill text-primary text-3xl"></i>
       </div>
@@ -34,7 +36,7 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
   <a href="testimonial.html" class="text-gray-800 hover:text-primary font-medium transition">Testimonials</a>
   <a href="contact.html" class="text-gray-800 hover:text-primary font-medium transition">Contact</a>
     </nav>
-    <button class="bg-primary text-white px-6 py-2.5 !rounded-button font-medium hover:bg-opacity-90 transition shadow-md whitespace-nowrap">Order Now</button>
+  <a href="product.html" class="bg-primary text-white px-6 py-2.5 !rounded-button font-medium hover:bg-opacity-90 transition shadow-md whitespace-nowrap block text-center">Order Now</a>
     <div class="md:hidden w-10 h-10 flex items-center justify-center">
       <i class="ri-menu-line ri-2x text-gray-800"></i>
     </div>
@@ -43,7 +45,7 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
 
 <!-- Chefs Section -->
 <section class="pt-32 pb-16 bg-gray-50">
-  <div class="container mx-auto px-6">
+  <div class="max-w-7xl mx-auto px-4">
     <div class="max-w-2xl mx-auto text-center mb-12">
       <h1 class="text-4xl font-bold text-gray-900 mb-4">Meet Our Master Chefs</h1>
       <p class="text-lg text-gray-600">The creative minds and skilled hands behind every Diajj cake.</p>
@@ -77,11 +79,11 @@ h1, h2, h3, h4, h5 { font-family: 'Playfair Display', serif; }
 
 <!-- Footer -->
 <footer class="bg-gray-900 text-white pt-16 pb-8">
-  <div class="container mx-auto px-6">
+  <div class="max-w-7xl mx-auto px-4">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
       <!-- Company Info -->
       <div>
-        <a href="home.html" class="flex items-center space-x-2 mb-6">
+          <a href="index.html" class="flex items-center space-x-2 mb-6">
           <div class="w-8 h-8 flex items-center justify-center">
             <i class="ri-cake-3-fill text-white text-3xl"></i>
           </div>
