--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f370.png">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f370.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home | Diajj Cakes</title>
 <meta name="description" content="Diajj Cakes - Nigeria's premier cake artisans. Order custom cakes for weddings, birthdays, and all occasions. View our products, meet our chefs, and read customer testimonials.">
@@ -10,7 +14,7 @@
 <meta property="og:title" content="Diajj Cakes - Home of Nigeria's Finest Cakes">
 <meta property="og:description" content="Order custom cakes for every occasion. Discover our products, meet our master chefs, and read real customer reviews.">
 <meta property="og:image" content="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=400&q=80">
-<meta property="og:url" content="https://diajjcakes.com/home.html">
+<meta property="og:url" content="https://diajjcakes.com/index.html">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Diajj Cakes - Home of Nigeria's Finest Cakes">
@@ -120,21 +124,21 @@ input[type="number"]::-webkit-outer-spin-button {
 <!-- Header -->
 <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
   <div class="container mx-auto px-6 py-4 flex items-center justify-between">
-    <a href="home.html" class="flex items-center space-x-2">
+    <a href="index.html" class="flex items-center space-x-2">
       <div class="w-8 h-8 flex items-center justify-center">
         <i class="ri-cake-3-fill text-primary text-3xl"></i>
       </div>
       <span class="text-3xl font-['Pacifico'] text-primary">Diajj Cakes</span>
     </a>
     <nav class="hidden md:flex items-center space-x-8">
-  <a href="home.html" class="text-primary font-medium transition border-b-2 border-primary">Home</a>
+  <a href="index.html" class="text-primary font-medium transition border-b-2 border-primary">Home</a>
   <a href="about.html" class="text-gray-800 hover:text-primary font-medium transition">About</a>
   <a href="product.html" class="text-gray-800 hover:text-primary font-medium transition">Products</a>
   <a href="chefs.html" class="text-gray-800 hover:text-primary font-medium transition">Chefs</a>
   <a href="testimonial.html" class="text-gray-800 hover:text-primary font-medium transition">Testimonials</a>
   <a href="contact.html" class="text-gray-800 hover:text-primary font-medium transition">Contact</a>
     </nav>
-    <button class="bg-primary text-white px-6 py-2.5 !rounded-button font-medium hover:bg-opacity-90 transition shadow-md whitespace-nowrap">Order Now</button>
+  <a href="product.html" class="bg-primary text-white px-6 py-2.5 !rounded-button font-medium hover:bg-opacity-90 transition shadow-md whitespace-nowrap block text-center">Order Now</a>
     <div class="md:hidden w-10 h-10 flex items-center justify-center">
       <i class="ri-menu-line ri-2x text-gray-800"></i>
     </div>
@@ -515,7 +519,7 @@ input[type="number"]::-webkit-outer-spin-button {
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
       <!-- Company Info -->
       <div>
-        <a href="home.html" class="flex items-center space-x-2 mb-6">
+          <a href="index.html" class="flex items-center space-x-2 mb-6">
           <div class="w-8 h-8 flex items-center justify-center">
             <i class="ri-cake-3-fill text-white text-3xl"></i>
           </div>
@@ -541,7 +545,7 @@ input[type="number"]::-webkit-outer-spin-button {
       <div>
         <h4 class="text-xl font-bold mb-6">Quick Links</h4>
         <ul class="space-y-3">
-          <li><a href="home.html" class="text-gray-400 hover:text-primary transition">Home</a></li>
+            <li><a href="index.html" class="text-gray-400 hover:text-primary transition">Home</a></li>
           <li><a href="about.html" class="text-gray-400 hover:text-primary transition">About Us</a></li>
           <li><a href="product.html" class="text-gray-400 hover:text-primary transition">Our Products</a></li>
           <li><a href="chefs.html" class="text-gray-400 hover:text-primary transition">Master Chefs</a></li>
